# dirverify

./: Cargo.toml  Cross.toml  README.md  build.sh
.github/workflows/: release.yml
src/: hashing.rs  main.rs
tests/: integration_tests.rs
